--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/p.png" />
+    <link rel="icon" type="image/png" href="p.png" />
     <title>Raj Gandhi - Academic Portfolio</title>
     <meta name="description" content="Computer Science student at MIT specializing in AI and Machine Learning. Explore my projects, skills, and academic journey." />
     <meta name="author" content="Raj Gandhi" />
